<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/history_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:padding="8dp"
            android:text="@string/match_history"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/play_offline_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:padding="8dp"
            android:text="@string/play_offline"
            app:cornerRadius="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_online_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:padding="8dp"
            android:text="@string/create_game_online"
            app:cornerRadius="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/game_id_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_game_id"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/join_online_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:padding="8dp"
            android:text="@string/join_game_online"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>